# typingtest

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  list.h  platform.c  str.h  typingtest.c  util.h  words.h
locale/: conclusions.c  conclusions.h  messages_en.c  messages_ru.c  messages_uk.c
src/: list.c  platform.h  str.c  typingtest.c  typingtest.h  util.c  util.h  words.c
src/locale/: messages.h  messages_ru.c  messages_uk.c
